# mini-agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-15-add-tools-plan.md
docs/superpowers/specs/: 2026-06-14-mini-agent-loop-design.md  2026-06-14-mini-agent-pip-packaging.md  2026-06-15-add-tools.md
mini_agent/: __init__.py  agent.py  cli.py  tools.py
